# kohonen-impl

./: .gitignore  CMakeLists.txt  CMakeListsShinji.txt  LICENSE  MNISTViewer.hpp  Makefile  README.md  Reader.hpp  convert  convert.cpp  cube.cpp  kohonen.cpp  kohonen.sh  main.cpp  run.sh  run2.sh  run3.sh  test.cpp  test2.cpp  test3  test3.cpp  viewneuron.cpp  visualizer.cpp
include/: Loader.hpp  Neuron.hpp  Reader.hpp  RedKohonen.hpp  kohonen.hpp  neuron.hpp  reader.hpp  som.hpp  visualizer.hpp
src/: Reader.hpp  RedKohonen.cpp  RedKohonen.hpp  Utils.hpp  Visualizer.hpp  kohonen.cpp  main.cpp  mainVisualizer.cpp
temp/: main.cpp  neuron.hpp  som.hpp
